added pip install playwright

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install all necessary packages
-        run: pip install jupyter lxml pandas requests beautifulsoup4
+        run: pip install jupyter lxml pandas requests beautifulsoup4 playwright
       - name: Run the scraping script
         run: jupyter nbconvert --to notebook --execute "scrape.ipynb" --stdout
       - name: Run the cleaning script
