--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
           python-version: '3.10'
       - name: Install all necessary packages
         run: pip install jupyter lxml pandas requests beautifulsoup4 playwright
+      - name: Install playwright dependencies
+        run: npx playwright install
       - name: Run the scraping script
         run: jupyter nbconvert --to notebook --execute "scrape.ipynb" --stdout
       - name: Run the cleaning script
